Fix hero image on narrow displays

--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ h2 {
   overflow-x: hidden;
   width: 100%;
   margin-top: -80px;
+  height: 694px;
+  display: flex;
 }
 
 .landing-hero-image {
@@ -156,6 +158,8 @@ h2 {
   margin-right: auto;  
   margin-left: 50%;
   transform: translateX(-50%);
+  max-width: 90%;
+  align-self: center;
 }
 
 .landing-hero-caption {
